# PKS-chat

PKS-zadanie-1/: CMakeLists.txt  global_variables.c  header.h  keep_alive.c  main.c  message_management.c  recieving.c  sending.c
